--- a/stylesheets/site.css
+++ b/stylesheets/site.css
@@ -18,12 +18,11 @@ a {
   margin-bottom: 36px; }
 
 .benchmark_page .benchmark_graph {
-  width: 70%;
   height: 340px;
-  margin: 0 auto 60px auto; }
+  margin: 60px auto; }
 
 .benchmarks-table {
-  width: 620px;
+  width: 700px;
   margin: 0 auto 14px auto; }
   .benchmarks-table a {
     text-decoration: underline; }
